Add API end-point /login-with-token Given a token it returns its associated username. This is used for auto-login when the token is already in the browser (or the app), because the username will be needed in later requests.
