# internal/handler/login/login_handler.go
@@ -5,8 +5,10 @@ import (
 	"fmt"
 	customErrors "gym-badges-api/internal/custom-errors"
 	loginService "gym-badges-api/internal/service/login"
+	sessionService "gym-badges-api/internal/service/session"
 	"gym-badges-api/models"
 	op "gym-badges-api/restapi/operations/login"
+	"gym-badges-api/restapi/operations/login_with_token"
 	toolsLogging "gym-badges-api/tools/logging"
 	"net/http"
 
@@ -27,14 +29,16 @@ var (
 	}
 )
 
-func NewLoginHandler(loginService loginService.ILoginService) ILoginHandler {
+func NewLoginHandler(loginService loginService.ILoginService, sessionService sessionService.ISessionService) ILoginHandler {
 	return &loginHandler{
-		loginService: loginService,
+		loginService:   loginService,
+		sessionService: sessionService,
 	}
 }
 
 type loginHandler struct {
-	loginService loginService.ILoginService
+	loginService   loginService.ILoginService
+	sessionService sessionService.ISessionService
 }
 
 func (h loginHandler) Login(params op.LoginParams) middleware.Responder {
@@ -42,8 +46,6 @@ func (h loginHandler) Login(params op.LoginParams) middleware.Responder {
 	ctxLog := toolsLogging.BuildLogger(params.HTTPRequest.Context())
 
 	ctxLog.Infof("LOGIN_HANDLER: Login for user: %s", params.Input.User)
-
-	// TODO User authentication with his token
 
 	response, err := h.loginService.Login(params.Input.User, params.Input.Password, ctxLog)
 	if err != nil {
@@ -57,4 +59,19 @@ func (h loginHandler) Login(params op.LoginParams) middleware.Responder {
 
 	return op.NewLoginOK().WithPayload(response)
 
+}
+
+func (h loginHandler) LoginWithToken(params login_with_token.LoginWithTokenParams) middleware.Responder {
+
+	username, err := h.sessionService.GetUserFromToken(params.Token)
+
+	if err != nil {
+		return login_with_token.NewLoginWithTokenUnauthorized().WithPayload(&unauthorizedErrorResponse)
+	}
+
+	response := models.LoginWithTokenResponse{
+		Username: username,
+	}
+
+	return login_with_token.NewLoginWithTokenOK().WithPayload(&response)
 }
