# internal/handler/login/login_handler_interface.go
@@ -2,10 +2,13 @@ package login_handler
 
 import (
 	"gym-badges-api/restapi/operations/login"
+	"gym-badges-api/restapi/operations/login_with_token"
 
 	"github.com/go-openapi/runtime/middleware"
 )
 
 type ILoginHandler interface {
 	Login(params login.LoginParams) middleware.Responder
+
+	LoginWithToken(params login_with_token.LoginWithTokenParams) middleware.Responder
 }
